--- a/styles/style.css
+++ b/styles/style.css
@@ -725,7 +725,19 @@ footer p {
     bottom: 23%;
   }
 }
-@media (max-width: 920px) {
+@media (max-width: 925px) {
+  h1 {
+    font-size: 140px;
+    font-size: 7rem;
+    padding-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .contact h3 {
     font-size: 30px;
     font-size: 1.5rem;
@@ -785,6 +797,20 @@ footer p {
   .devIcons {
     margin-left: 5%;
     margin-right: 5%;
+  }
+}
+@media (max-width: 480px) {
+  h1 {
+    font-size: 100px;
+    font-size: 5rem;
+    padding-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 @media (max-width: 400px) {
